# dr_mnc_layers

./: CMakeLists.txt  PKGBUILD
cmake/modules/: FindYamlCpp.cmake
src/: fast_rcnn_layers.hpp  mask_pooling_layer.cpp  mask_pooling_layer.cu  mask_resize_layer.cpp  mask_resize_layer.cu  mask_resize_layer.hpp  roi_pooling_layer.cpp  roi_pooling_layer.cu  roi_warping_layer.cpp  roi_warping_layer.cu  sigmoid_cross_entropy_loss_layer.cpp  sigmoid_cross_entropy_loss_layer.hpp  smooth_L1_loss_layer.cpp  smooth_L1_loss_layer.cu
